<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivaty">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivaty"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="129dp">

        <EditText
            android:id="@+id/time"
            android:layout_width="163dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="Time"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.891"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <EditText
            android:id="@+id/date"
            android:layout_width="163dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="Date"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="354dp"
            android:layout_height="101dp"
            android:ems="10"
            android:hint="Comment"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.765" />

        <EditText
            android:id="@+id/pulse"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginBottom="72dp"
            android:ems="10"
            android:hint="Pulse"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toTopOf="@+id/comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/add_button2"
            android:layout_width="91dp"
            android:layout_height="53dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="56dp"
            android:text="Add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/systolic"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="Systolic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <EditText
        android:id="@+id/diastolic"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="Diastolic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

</androidx.constraintlayout.widget.ConstraintLayout>